Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- #1337: Refactoring of the roots import to allow better configuration.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- moved CPSPortlets to an extension profile and make it mandatory at install 
  time
- moved CPSSkins to an extension profile and make it mandatory at install time
- members root folder is now a Members Workspace (CPS Proxy BTree Folder)
- added Flash Animation widget to the Web Document
- move byline in folder_contents according to #1290
- updated isInWorkspace script to take into account also the new Members 
  Workspace portal type
- Favorites actions are disabled by default (#1248)
- removed "translate" action from document's workflow (#1347)