@@ -19,3 +19,4 @@ New internal features:
   Workspace portal type
 - Favorites actions are disabled by default (#1248)
 - removed "translate" action from document's workflow (#1347)
+- adding Entry Local Role for allowing users to view the groups they belong to
